32px gap, fix key, show loading

--- a/ecommerce/frontend/src/components/Purchase.less
+++ b/ecommerce/frontend/src/components/Purchase.less
@@ -13,7 +13,7 @@
 
 .purchase-product {
     display: flex;
-    gap: 8px;
+    gap: 32px;
     &-picture {
         img {
             height: 120px;
@@ -23,12 +23,6 @@
     }
 
     &-details {
-    }
-
-    &-status {
-    }
-
-    &-extra {
     }
 }
 
